--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ button[type="submit"] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    float: right;
+    /* float: right; */
 }
 
 button[type="submit"]:hover {
